--- a/src/app/editoras/editoras.component.html
+++ b/src/app/editoras/editoras.component.html
@@ -6,7 +6,7 @@
       <li class="list-group-item"
       *ngFor="let editora of editoras">
         <a href="#!" *ngIf="editora.ativa" class="text-dark"
-        [routerLink]="['/editoras', editora.codigo]">
+        [routerLink]="['/editoras', editora.id]">
           {{ editora.nome }} - {{ editora.email }} - {{ editora.endereco }}}
         </a>
       </li>
