Atualização do repositório

--- a/src/app/editoras/editora-detalhe/editora-detalhe.component.html
+++ b/src/app/editoras/editora-detalhe/editora-detalhe.component.html
@@ -3,16 +3,16 @@
   <div class="card row">
     <ul class="list-group list-group-flush">
       <li class="list-group-item">
-        {{ editora.nome }}
+        {{ editora.getNome() }}
       </li>
       <li class="list-group-item">
-        {{ editora.telefone }}
+        {{ editora.getTelefone() }}
       </li>
       <li class="list-group-item">
-        {{ editora.email }}
+        {{ editora.getEmail() }}
       </li>
       <li class="list-group-item">
-        {{ editora.endereco }}
+        {{ editora.getEndereco() }}
       </li>
     </ul>
   </div>
