--- a/src/app/filiais/filial-detalhe/filial-detalhe.component.html
+++ b/src/app/filiais/filial-detalhe/filial-detalhe.component.html
@@ -3,16 +3,16 @@
   <div class="card row">
     <ul class="list-group list-group-flush">
       <li class="list-group-item">
-        {{ filial.nome }}
+        {{ filial.getNome() }}
       </li>
       <li class="list-group-item">
-        {{ filial.telefone }}
+        {{ filial.getTelefone() }}
       </li>
       <li class="list-group-item">
-        {{ filial.email }}
+        {{ filial.getEmail() }}
       </li>
       <li class="list-group-item">
-        {{ filial.endereco }}
+        {{ filial.getEndereco() }}
       </li>
     </ul>
   </div>
