--- a/src/app/livros/livro-detalhe/livro-detalhe.component.html
+++ b/src/app/livros/livro-detalhe/livro-detalhe.component.html
@@ -3,13 +3,13 @@
   <div class="card row">
     <ul class="list-group list-group-flush">
       <li class="list-group-item">
-        {{ nome }}
+        {{ livro.getNome() }}
       </li>
       <li class="list-group-item">
-        {{ nomeAutor }}
+        {{ livro.getNomeAutor() }}
       </li>
       <li class="list-group-item">
-        {{ valor }}
+        {{ livro.getValor() }}
       </li>
     </ul>
   </div>
