--- a/src/app/filiais/filial-form/filial-form.component.html
+++ b/src/app/filiais/filial-form/filial-form.component.html
@@ -2,45 +2,39 @@
   <form class="form-horizontal" [formGroup]="formulario">
     <div class="col-sm-12">
       <label class="control-label">Nome</label>
-      <input type="text" class="form-control" formControlName="nome" [(ngModel)]="filial.nome">
+      <input type="text" class="form-control" formControlName="nome">
     </div>
     <div class="col-sm-12" formControlName="email">
       <label class="control-label" for="email">Email</label>
       <input type="email" class="form-control" formControlName="email"
-       id="email" placeholder="nome@email.com" [(ngModel)]="filial.email">
+       id="email" placeholder="nome@email.com">
     </div>
     <div class="col-md-12">
       <label for="telefone" class="control-label">Telefone</label>
-      <input type="text" class="form-control" id="telefone" [(ngModel)]="filial.telefone"
-        formControlName="telefone" placeholder="(XX) XXXXX-XXXX">
+      <input type="text" class="form-control" id="telefone" formControlName="telefone"
+             placeholder="(XX) XXXXX-XXXX">
     </div>
     <div class="form-group">
       <div class="col-md-12">
         <label for="endereco" class="control-label">Endereço</label>
-        <input type="text" class="form-control" id="endereco"
-        formControlName="endereco" [(ngModel)]="filial.endereco">
+        <input type="text" class="form-control" id="endereco" formControlName="endereco">
       </div>
       <div class="row">
         <div class="col-md-4">
           <label for="cidade" class="control-label">Cidade</label>
-          <select class="form-control" id="cidade" formControlName="cidade" [ngModel]="cidade.codigo">
-            <option *ngFor="let cidade of cidades" [ngValue]="cidade.codigo"
-            [selected]="filial.cidade == cidade.codigo">{{ cidade.nome }}</option>
+          <select class="form-control" id="cidade" formControlName="cidade">
+            <option *ngFor="let cidade of cidades" [ngValue]="cidade.getCodigo">{{ cidade.getNome() }}</option>
           </select>
         </div>
         <div class="col-md-3">
           <label for="estado" class="control-label">Estado</label>
           <select class="form-control" id="estado" formControlName="estado">
-            <option *ngFor="let estado of estados" [value]="estado.sigla">{{ estado.nome }}</option>
+            <option *ngFor="let estado of estados" [value]="estado.getSigla">{{ estado.getNome() }}</option>
           </select>
         </div>
       </div>
     </div>
-    <a class="btn btn-primary" *ngIf="filial.codigo!=0"
-     (click)="editarFilial(this.filial)">Editar</a>
-    <a class="btn btn-sucess"
-     (click)="addFilial()" *ngIf="filial.codigo==0">Salvar</a>
-    <a class="btn btn-danger" *ngIf="filial.codigo!=0"
-     (click)="excluirFilial(this.filial)">Excluir</a>
+    <a class="btn btn-success" (click)="onSubmit()">Salvar</a>
+    <a class="btn btn-dark" (click)="onCancel()">Cancelar</a>
   </form>
 </div>
